swagger dorayaki and fix conflict docker done. TODO: testing
